# search_engine

./: README.md  pyproject.toml  search.py  search_results.db
web/: package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/components/: footer.tsx  logo.tsx  search.tsx
