[tool.poetry]
name = "search-engine"
version = "0.1.0"
description = "A web interface for search"
authors = ["grainne.mcknight <mcknighg@tcd.ie>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.31.0"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
loguru = "^0.7.2"
openai = "^1.30.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
